force-app/main/default/objects/OpportunityLineItem/fields/Dispatch_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Method_Code__c</fullName>
    <label>ALM Dispatch Method Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>