force-app/main/default/objects/OpportunityLineItem/fields/Full_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Full_Contract_Value__c</fullName>
    <label>ALM Total Contract Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>